# bluetooth_mgr

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  Makefile.am  Makefile.in  NOTICE  README.txt  THREADING_CHANGES.md  THREADING_NOTES.md  btrMgr_IncomingConnectionAuthentication_threading.patch  btrmgr_threading.patch  configure  configure.ac  project.yml
.github/: CODEOWNERS
.github/workflows/: L2_test.yml  native_full_build.yml  unitTest.yml
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.3
conf/: btmgr-htmlcontrol.service  btmgr.service
include/: btmgr.h
include/audioCap/: btrMgr_audioCap.h
include/batteryService/: btrMgr_batteryService.h
include/columbo/: btrMgr_Columbo.h
include/common/: btrMgr_Types.h  btrMgr_mediaTypes.h
include/leOnboarding/: btrMgr_LEOnboarding.h  ecdh.h
include/logger/: btrMgr_logger.h
include/persistIf/: btrMgr_persistIface.h
include/rpc/: btmgr_iarm_interface.h  btmgr_rbus_interface.h  btrMgr_IarmInternalIfce.h
include/safec/: safec_lib.h
include/streamIn/: btrMgr_streamIn.h  btrMgr_streamInGst.h
include/streamOut/: btrMgr_streamOut.h  btrMgr_streamOutGst.h
include/sysDiag/: btrMgr_DeviceUtils.h  btrMgr_SysDiag.h
src/: Makefile.am  Makefile.in
src/audioCap/: Makefile.am  Makefile.in  btrMgr_audioCap.c
src/batteryService/: Makefile.am  Makefile.in  btrMgr_batteryService.c
src/columbo/: Makefile.am  Makefile.in  btrMgr_Columbo.c
src/ifce/: Makefile.am  Makefile.in  btrMgr.c
src/leOnboarding/: Makefile.am  Makefile.in  btrMgr_LEOnboarding.c  ecdh.c
src/main/: Makefile.am  Makefile.in  btrMgr_main.c
src/persistIf/: Makefile.am  Makefile.in  btrMgr_persistIface.c
src/rpc/: Makefile.am  Makefile.in  btmgr_iarm_external_interface.c  btmgr_iarm_internal_interface.c  btmgr_rbus_external_interface.c  btmgr_rbus_internal_interface.c
src/streamIn/: Makefile.am  Makefile.in  btrMgr_streamIn.c  btrMgr_streamInGst.c
src/streamOut/: Makefile.am  Makefile.in  btrMgr_streamOut.c  btrMgr_streamOutGst.c
src/sysDiag/: Makefile.am  Makefile.in  btrMgr_DeviceUtils.c  btrMgr_SysDiag.c
tests/: Makefile.am  Makefile.in  bluezMockV2.py  btrMgr_autoTests.c  btrMgr_inputMonitor.c  btrMgr_test.c  btrMgr_testFcgi.c  btrMgr_testRbus.c  json_parsing_test.py
tests/streamInOut/: Makefile.am  Makefile.in  btrMgr_streamInOutCoreTest.c
unitTest/support/: AdapterIdNotFoundInJsonContent.json  AddLimitDetection.json  Duplicate.json  GetAllProfiles_when_InvalidJsonContent.json  Get_mute_CorruptedFile.json  Get_mute_missing_mute.json  ProfilesNotFoundInJsonContent.json  Second_Null.json  SetVolume_when_InvalidJsonContent.json  Set_mute_CorruptedFile.json  correct_param.json  get_Limit_Beacon_CorruptedFile.json  set_Connection_Status_Corrupted_Json.json  set_Connection_Status_Missing_Profiles.json  set_Connection_status_both_profile_and_device_match.json  set_Limit_Beacon_Good.json  set_Mute_Off.json  set_Mute_On.json  set_allDetailsPresent.json  set_noVolume_data.json  volume_tv.json
unitTest/support/include/: basic_types.h  bt-telemetry.h
unitTest/unitTest_btmgr/: test_btmgr_iarm_internal_interface.c  test_btmgr_streamOut.c  test_btrMgr.c  test_btrMgr_audioCap.c  test_btrMgr_persistIface.c  test_btrMgr_streamIn.c  test_btrMgr_streamOutGst.c
